issue with too long french texts in options panel fixed

--- a/www/static/css/datawrapper.css
+++ b/www/static/css/datawrapper.css
@@ -1145,7 +1145,7 @@ form.well form {
     max-width: 33%;
 }
 .visualize-nav-tabs li.active {
-    max-width: 40%;
+    max-width: 47%;
 }
 
 .visualize-nav-tabs li a {
